Don't stretch images vertically [Issue #225]

--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -93,7 +93,6 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 100%;
   position: relative;
   width: 400px;
-  height: 400px;
   clear: both;
   font-size: 1em;
   margin-left: auto;
